cmake_minimum_required(VERSION 3.31)
project(PTIT_CNTT1_IT201_Session08 C)

set(CMAKE_C_STANDARD 11)

add_executable(PTIT_CNTT1_IT201_Session08 PTIT_CNTT1_IT201_Session08_Bai01.c
        PTIT_CNTT1_IT201_Session08_Bai02.c
        PTIT_CNTT1_IT201_Session08_Bai03.c
        PTIT_CNTT1_IT201_Session08_Bai04.c
        PTIT_CNTT1_IT201_Session08_Bai05.c
        PTIT_CNTT1_IT201_Session08_Bai06.c
        PTIT_CNTT1_IT201_Session08_Bai07.c
        PTIT_CNTT1_IT201_Session08_Bai08.c)
